Handled reappending events to queue plus fixed missing port bug